--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11771,7 +11771,7 @@ p.is-intro-text {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 45%;
+  left: 44.5%;
   right: 0;
   justify-content: space-between; }
 
